// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Respond with a formatted time series for days 1`] = `
Object {
  "historical": Array [
    Object {
      "date": "2022-03-20",
      "pageviews": 1,
      "visits": 5,
    },
    Object {
      "date": "2022-03-20",
      "pageviews": 3,
      "visits": 7,
    },
  ],
  "stories": Array [
    Object {
      "pageviews": 1,
      "pathname": "/test.btc/path-test",
      "visits": 5,
    },
    Object {
      "pageviews": 3,
      "pathname": "/test.btc/path-test-2",
      "visits": 7,
    },
  ],
}
`;

exports[`Respond with a formatted time series for months 1`] = `
Object {
  "historical": Array [
    Object {
      "date": "2022-03-01",
      "pageviews": 1,
      "visits": 5,
    },
  ],
  "stories": Array [
    Object {
      "pageviews": 1,
      "pathname": "/test.btc/path-test",
      "visits": 5,
    },
    Object {
      "pageviews": 3,
      "pathname": "/test.btc/path-test-2",
      "visits": 7,
    },
  ],
}
`;

exports[`Respond with a formatted time series for one story 1`] = `
Object {
  "historical": Array [
    Object {
      "date": "2022-03-01",
      "pageviews": 1,
      "visits": 5,
    },
  ],
  "stories": Array [
    Object {
      "pageviews": 1,
      "pathname": "/test.btc/path-test",
      "visits": 5,
    },
  ],
}
`;
